rns-lang/src/lexer/snapshots/strings-followed_by_directive.snap
---
source: rns/src/lexer/snapshot_tests.rs
expression: formatted
---
----- SOURCE -----
"string" .class
----- TOKENS -----
KIND                     | SPAN    | LSP       | TEXT
----                     | ----    | ---       | ----
StringLiteral("string")  | 0..8    | 0:0..8    | "string"
DotClass                 | 9..15   | 0:9..15   | .class
Eof                      | 15..15  | 0:15..15  |
