rns-lang/src/lexer/snapshots/strings-followed_by_identifier.snap
---
source: rns/src/lexer/snapshot_tests.rs
expression: formatted
---
----- SOURCE -----
"string" identifier
----- TOKENS -----
KIND                      | SPAN    | LSP       | TEXT
----                      | ----    | ---       | ----
StringLiteral("string")   | 0..8    | 0:0..8    | "string"
Identifier("identifier")  | 9..19   | 0:9..19   | identifier
Eof                       | 19..19  | 0:19..19  |
