rns-lang/src/lexer/snapshots/strings-followed_by_keyword.snap
---
source: jasm/src/lexer/tests.rs
expression: formatted
---
----- SOURCE -----
"string" public
----- TOKENS -----
KIND                     | SPAN    | TEXT
----                     | ----    | ----
StringLiteral("string")  | 0..8    | "string"
AccessFlag(Public)       | 9..15   | public
Eof                      | 15..15  |
