rns-lang/src/lexer/snapshots/strings-with_numbers_special.snap
---
source: rns/src/lexer/snapshot_tests.rs
expression: formatted
---
----- SOURCE -----
"abc123!@#"
----- TOKENS -----
KIND                        | SPAN    | LSP       | TEXT
----                        | ----    | ---       | ----
StringLiteral("abc123!@#")  | 0..11   | 0:0..11   | "abc123!@#"
Newline                     | 11..12  | 0:11..12  | \n
