rns-lang/src/lexer/snapshots/strings-with_spaces.snap
---
source: rns/src/lexer/snapshot_tests.rs
expression: formatted
---
----- SOURCE -----
"hello world with spaces"
----- TOKENS -----
KIND                                      | SPAN    | LSP       | TEXT
----                                      | ----    | ---       | ----
StringLiteral("hello world with spaces")  | 0..25   | 0:0..25   | "hello world with spaces"
Newline                                   | 25..26  | 0:25..26  | \n
