rns-lang/src/lexer/snapshots/type_hints-all_type_hints.snap
---
source: rns/src/lexer/snapshot_tests.rs
expression: formatted
---
----- SOURCE -----
@utf8
@int
@string
@class
@methodref
@fieldref
@interfaceMethodref
@float
@long
@double
@nameAndType
@methodHandle
@methodType
@dynamic
@invokeDynamic
@module
@package
----- TOKENS -----
KIND                          | SPAN      | LSP        | TEXT
----                          | ----      | ---        | ----
TypeHint(utf8)                | 0..5      | 0:0..5     | @utf8
Newline                       | 5..6      | 0:5..6     | \n
TypeHint(integer)             | 6..10     | 1:0..4     | @int
Newline                       | 10..11    | 1:4..5     | \n
TypeHint(string)              | 11..18    | 2:0..7     | @string
Newline                       | 18..19    | 2:7..8     | \n
TypeHint(class)               | 19..25    | 3:0..6     | @class
Newline                       | 25..26    | 3:6..7     | \n
TypeHint(methodref)           | 26..36    | 4:0..10    | @methodref
Newline                       | 36..37    | 4:10..11   | \n
TypeHint(fieldref)            | 37..46    | 5:0..9     | @fieldref
Newline                       | 46..47    | 5:9..10    | \n
TypeHint(interfaceMethodref)  | 47..66    | 6:0..19    | @interfaceMethodref
Newline                       | 66..67    | 6:19..20   | \n
TypeHint(float)               | 67..73    | 7:0..6     | @float
Newline                       | 73..74    | 7:6..7     | \n
TypeHint(long)                | 74..79    | 8:0..5     | @long
Newline                       | 79..80    | 8:5..6     | \n
TypeHint(double)              | 80..87    | 9:0..7     | @double
Newline                       | 87..88    | 9:7..8     | \n
TypeHint(nameAndType)         | 88..100   | 10:0..12   | @nameAndType
Newline                       | 100..101  | 10:12..13  | \n
TypeHint(methodHandle)        | 101..114  | 11:0..13   | @methodHandle
Newline                       | 114..115  | 11:13..14  | \n
TypeHint(methodType)          | 115..126  | 12:0..11   | @methodType
Newline                       | 126..127  | 12:11..12  | \n
TypeHint(dynamic)             | 127..135  | 13:0..8    | @dynamic
Newline                       | 135..136  | 13:8..9    | \n
TypeHint(invokeDynamic)       | 136..150  | 14:0..14   | @invokeDynamic
Newline                       | 150..151  | 14:14..15  | \n
TypeHint(module)              | 151..158  | 15:0..7    | @module
Newline                       | 158..159  | 15:7..8    | \n
TypeHint(package)             | 159..167  | 16:0..8    | @package
Newline                       | 167..168  | 16:8..9    | \n
Eof                           | 168..168  | 17:0..0    |
